# pre_processing-container-generator-from-mlflow

./: .env.example  .env.template  .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  build.sh  coverage.xml  note.ttxt  note_todo.txt  pyproject.toml  pytest.ini  requirements-bridge.txt  requirements.txt
.github/workflows/: _unit-tests.yml  build-mlflow-images.yml  ci.yml  deploy-docs.yml
binder/: requirements.txt
build_scripts/: __init__.py  api.py  build_image.py  build_model_image.py  build_model_image.sh  utils.py
dev_usage/: docker-compose.kafka.yml  setup_mlflow_local.py
dev_usage/preprocessing_mlflow/: preprocessing.py  requirements.txt
docker/: Dockerfile  Dockerfile.bridge  Dockerfile.model  README_MODEL.md  entrypoint.sh  entrypoint_model.sh
docs/: _config.yml  _toc.yml  preprocessing.py  tutorial.ipynb  tutorial.py
examples/simple/: requirements_example.txt  simple_preprocessing.py
helm/: values-ztf-real-bogus-model.yaml  values-ztf-real-bogus-preprocessing.yaml
helm/ml-module/: Chart.yaml  values.yaml
kafka_bridge/: __init__.py  api_client.py  bridge.py  config.py  consumer.py  logger.py  producer.py  schema_fetcher.py  serializers.py  signals.py
runner/: __init__.py  api_server.py  kafka_processor.py  runner.py
schemas/: ztf_alert_v3.3.avsc  ztf_alert_v3.3_inference.avsc
tests/: README.md  __init__.py  conftest.py  test_build_image.py  test_build_model_image.py  test_preprocessing_contract.py  test_runner.py
training/: PIPELINE_TRIGGER.md  preprocessing.py  promote.py  requirements.txt  train.py
(+6 files in other folders)
