[project]
name = "mlflow-preprocessing-runner"
version = "0.1.0"
description = "Kafka preprocessing bridge for ZTF alerts with MLflow model serving"
requires-python = ">=3.12"

# Runtime — Kafka bridge and preprocessing container
dependencies = [
    "confluent-kafka>=2.3.0",
    "fastavro>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
]

[dependency-groups]
# CI build-and-push + local image builds
build = [
    "mlflow>=3.6.0",
    "boto3>=1.35.0",
]
# Local model training and MLflow logging
training = [
    "mlflow>=3.6.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
]
# CI unit-tests + local test runs
test = [
    "pytest>=7.4.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "mlflow>=3.10.1",
]
# Local code quality
lint = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.7.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test       = "pytest tests/ -v -m 'not integration' --tb=short"
test-all   = "pytest tests/ -v --tb=short"
train      = "python training/train.py"
format     = {composite = ["black .", "isort ."]}
check      = {composite = ["black --check .", "isort --check .", "flake8 ."]}
pre-commit = "pre-commit run --all-files"

[tool.pdm.resolution.overrides]
# mario 0.0.154 pins trio==0.11.0 which breaks Python 3.12 traceback handling
trio = ">=0.22.0"
importlib_metadata = ">=3.7.0,<9"
